Added getTalismans() method